--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
-streamlit==0.88.0
-plotly==5.3.1
 pandas==1.3.3
+streamlit==1.16.0
+plotly==5.3.1
+numpy==1.21.2
+scipy==1.7.3
+scikit-learn==0.24.2
+matplotlib==3.4.3
+seaborn==0.11.2
