--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,30 @@
-pandas==1.3.3
-streamlit==1.16.0
-plotly==5.3.1
-dash==1.21.0 
-numpy==1.21.2
-scipy==1.7.3
-scikit-learn==0.24.2
-matplotlib==3.4.3
-seaborn==0.11.2
+ansi2html==1.9.1
+
+blinker==1.7.0
+
+certifi==2023.11.17
+
+charset-normalizer==3.3.2
+
+click==8.1.7
+
+colorama==0.4.6
+
+numpy==1.26.3
+
+pandas==2.2.0
+
+plotly==5.18.0
+
+python-dateutil==2.8.2
+
+pytz==2023.3.post1
+
+requests==2.31.0
+
+retrying==1.3.4
+
+six==1.16.0
+
+streamlit==1.29.0
+
